--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -35,9 +35,12 @@
               <li><a href="#">Profile</a></li>
               <li><a href="#">My Feeds</a></li>
               <li class="divider"></li>
-              <li><a href="#">Log Out</a></li>
+              <li><%=link_to "Log Out", session_path, method: :delete%></li>
             </ul>
           </li>
+        <% else %>
+          <li><%= link_to "Log In", new_session_path%></li>
+          <li><%= link_to "Sign Up", new_user_path%></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
